@@ -1,3 +1,6 @@
+27th September 2009 - Euan Freeman
+  - Updated for tint2 revision 208 (systray_sort options)
+
 20th September 2009 - Euan Freeman
   - Updated icon_hsb to icon_asb (hue -> alpha)
   
